--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ target_link_libraries(
 target_include_directories(
   ctcdecoder-libraries
   PUBLIC
+  ${PROJECT_SOURCE_DIR}
   )
 
 target_compile_definitions(
